Agregando request simplificado para Products
